[gd_scene load_steps=2 format=3 uid="uid://dkh8qm7wp5n2c"]

[ext_resource type="Script" path="res://scripts/match/GrowthResultPanel.gd" id="1_script"]

[node name="GrowthResultPanel" type="PanelContainer"]
custom_minimum_size = Vector2(350, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -150.0
offset_right = 175.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "STAT GROWTH"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="TotalXPLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Total XP: 0.0"
horizontal_alignment = 1

[node name="StatsScroll" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsContainer" type="VBoxContainer" parent="VBox/StatsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="VBox"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Close"
